--- a/api-client-core/build.gradle
+++ b/api-client-core/build.gradle
@@ -1,3 +1,11 @@
+apply plugin: 'java'
+
+group = 'com.takipi'
+version = '1.0'
+
+repositories {
+    mavenCentral()
+}
 dependencies {
 	compile(
 		"ch.qos.logback:logback-classic:1.1.2",
