--- a/api-client-core/build.gradle
+++ b/api-client-core/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'signing'
 
 group = 'com.takipi'
-version = '1.0'
+archivesBaseName = 'api-client-core'
+version = '0.9'
 
 repositories {
     mavenCentral()
@@ -14,4 +17,61 @@ dependencies {
 		"com.google.code.gson:gson:2.8.2",
 		"commons-codec:commons-codec:1.9",
 	)
+}
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+artifacts {
+    archives javadocJar, sourcesJar
+}
+signing {
+    sign configurations.archives
+}
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+        authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
+      }
+
+      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+        authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
+      }
+
+      pom.project {
+        name 'api-client-core'
+        packaging 'jar'
+        description 'OverOps API Client'
+        url 'https://github.com/takipi/api-client'
+
+        scm {
+          connection 'scm:git:https://github.com/takipi/api-client/tree/master/api-client-core'
+          developerConnection 'scm:git:https://github.com/takipi/api-client/tree/master/api-client-core'
+          url 'https://github.com/takipi/api-client/tree/master/api-client-core'
+        }
+
+        licenses {
+          license {
+            name 'MIT License'
+            url 'https://github.com/takipi/api-client/blob/master/LICENSE'
+          }
+        }
+
+        developers {
+          developer {
+            id 'chook'
+            name 'Chen Harel'
+            email 'chen.harel@takipi.com'
+          }
+        }
+      }
+    }
+  }
 }
