--- a/api-client-core/build.gradle
+++ b/api-client-core/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
 	compile(
-		"ch.qos.logback:logback-classic:1.1.2",
-		"commons-io:commons-io:2.5",
-		"com.google.guava:guava:14.0.1",
-		"com.google.code.gson:gson:2.8.2",
-		"commons-codec:commons-codec:1.9",
+		"org.slf4j:slf4j-api:1.7.25",
+		"commons-io:commons-io:2.6",
+		"com.google.guava:guava:26.0-jre",
+		"com.google.code.gson:gson:2.8.5",
+		"commons-codec:commons-codec:1.11",
 	)
 }
