--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@ subprojects {
   apply plugin: 'java'
   apply plugin: 'maven'
   apply plugin: 'signing'
-  
+
   group = 'com.takipi'
   version = '1.0.0'
-  
+
   repositories {
       mavenCentral()
   }
-  
+
   task javadocJar(type: Jar) {
       classifier = 'javadoc'
       from javadoc
@@ -44,6 +44,14 @@ subprojects {
             license {
               name 'MIT License'
               url 'http://www.opensource.org/licenses/mit-license.php'
+            }
+          }
+
+          developers {
+            developer {
+              id 'chook'
+              name 'Chen Harel'
+              email 'chen.harel@takipi.com'
             }
           }
         }
