--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ subprojects {
   apply plugin: 'java'
   apply plugin: 'maven'
   apply plugin: 'signing'
+  apply plugin: 'eclipse'
 
   group = 'com.takipi'
   version = '1.0.0'
@@ -22,6 +23,7 @@ subprojects {
       archives javadocJar, sourcesJar
   }
   signing {
+      required { gradle.taskGraph.hasTask("uploadArchives") }
       sign configurations.archives
   }
   uploadArchives {
