--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ subprojects {
   apply plugin: 'maven'
   apply plugin: 'signing'
   apply plugin: 'eclipse'
+  apply plugin: 'idea'
 
   group = 'com.takipi'
   version = '2.11.2'
