api clinet is java 8

--- a/api-client-util/build.gradle
+++ b/api-client-util/build.gradle
@@ -1,5 +1,10 @@
 archivesBaseName = 'api-client-util'
 
+compileJava {
+	sourceCompatibility = 1.8
+	targetCompatibility = 1.8
+}
+
 dependencies {
 	compile(
 		project(':api-client'),
