update java8 compatibility

--- a/api-client/build.gradle
+++ b/api-client/build.gradle
@@ -3,19 +3,20 @@ apply plugin: 'maven'
 archivesBaseName = 'api-client'
 
 compileJava {
-	sourceCompatibility = 1.8
-	targetCompatibility = 1.8
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+  options.forkOptions.executable = backendJavac
 }
 
 dependencies {
-	compile(
-		"joda-time:joda-time:2.8.2",
-		"commons-codec:commons-codec:1.9",
-		"commons-io:commons-io:2.5",
-		"com.google.guava:guava:20.0",
-		"com.google.code.gson:gson:2.8.2",
-		"org.slf4j:slf4j-api:1.7.25"
-	)
+    compile(
+        "joda-time:joda-time:2.8.2",
+        "commons-codec:commons-codec:1.9",
+        "commons-io:commons-io:2.5",
+        "com.google.guava:guava:20.0",
+        "com.google.code.gson:gson:2.8.2",
+        "org.slf4j:slf4j-api:1.7.25"
+    )
 }
 uploadArchives {
   repositories {
