--- a/api-client-util/build.gradle
+++ b/api-client-util/build.gradle
@@ -5,6 +5,7 @@ archivesBaseName = 'api-client-util'
 compileJava {
 	sourceCompatibility = 1.8
 	targetCompatibility = 1.8
+  options.forkOptions.executable = backendJavac
 }
 
 dependencies {
