--- a/api-client/build.gradle
+++ b/api-client/build.gradle
@@ -8,19 +8,14 @@ if (project.ext.has("backendJavac")) {
   }
 }
 
-compileJava {
-	sourceCompatibility = 1.8
-	targetCompatibility = 1.8
-}
-
 dependencies {
 	compile(
 		"joda-time:joda-time:2.8.2",
-		"commons-codec:commons-codec:1.9",
-		"commons-io:commons-io:2.5",
-		"com.google.guava:guava:20.0",
+		"commons-codec:commons-codec:1.10",
+		"commons-io:commons-io:2.6",
+		"com.google.guava:guava:28.1-jre",
 		"com.google.code.gson:gson:2.8.2",
-		"org.slf4j:slf4j-api:1.7.25"
+		"org.slf4j:slf4j-api:1.7.28"
 	)
 }
 uploadArchives {
