[OO-10161] Fixed build for report-services.  It now can be run with gradle and populate in the .m2 directory properly

--- a/report-service/build.gradle
+++ b/report-service/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'maven'
 
-archivesBaseName = 'api-client'
+archivesBaseName = 'report-service'
 
 if (project.ext.has("backendJavac")) {
   compileJava {
@@ -19,7 +19,7 @@ uploadArchives {
   repositories {
     mavenDeployer {
       pom.project {
-        name 'api-client'
+        name 'report-service'
         description 'OverOps API Client, interacts with OverOps Server REST API'
 
         scm {
