[OOE-24] Movied Handlebars HTML generation to common project

--- a/report-service/build.gradle
+++ b/report-service/build.gradle
@@ -18,6 +18,7 @@ if (project.ext.has("backendJavac")) {
 
 dependencies {
     compile(
+            "com.github.jknack:handlebars:4.1.2",
             project(':api-client'),
             project(':api-client-util')
     )
