--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 
 subprojects {
   apply plugin: 'java'
-  apply plugin: 'maven'
+  apply plugin: 'maven-publish'
   apply plugin: 'signing'
   apply plugin: 'eclipse'
   apply plugin: 'idea'
@@ -46,13 +46,13 @@ subprojects {
 	}
 	
 	dependencies {
-		testCompile(
+		testImplementation(
 			'org.junit.jupiter:junit-jupiter-api:5.5.2',
 			'org.junit.jupiter:junit-jupiter-params:5.5.2',
 			'org.assertj:assertj-core:3.13.2'
 		)
 		
-		testRuntime(
+		testRuntimeOnly(
 			'org.junit.jupiter:junit-jupiter-engine:5.5.2',
 			'ch.qos.logback:logback-classic:1.2.3'
 		)
@@ -60,9 +60,9 @@ subprojects {
 
 	test.outputs.upToDateWhen { false }
 
-  uploadArchives {
-    repositories {
-      mavenDeployer {
+  publishing {
+    publications {
+      maven(MavenPublication) {
         beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
         repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
@@ -72,7 +72,7 @@ subprojects {
         snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
           authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
         }
-        pom.project {
+        pom {
           packaging 'jar'
           url 'https://github.com/takipi/api-client'
 
