--- a/report-service/build.gradle
+++ b/report-service/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     implementation(
             "com.github.jknack:handlebars:4.1.2",
             "org.apache.httpcomponents:httpclient:4.5.13",
+            "joda-time:joda-time:2.8.2",
+            "com.google.code.gson:gson:2.8.2",
+            "commons-io:commons-io:2.6",
             project(':api-client'),
             project(':api-client-util')
     )
