--- a/api-client-util/build.gradle
+++ b/api-client-util/build.gradle
@@ -1,26 +1,26 @@
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 archivesBaseName = 'api-client-util'
 
 dependencies {
-	compile(
+	implementation(
 		project(':api-client'),
 		"org.ocpsoft.prettytime:prettytime:4.0.2.Final"
 	)
 }
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      pom.project {
-        name 'api-client-util'
-        description 'OverOps API Client utility classes, interacts with OverOps Server REST API'
-        
-        scm {
-          connection 'scm:git:https://github.com/takipi/api-client/tree/master/api-client-util'
-          developerConnection 'scm:git:https://github.com/takipi/api-client/tree/master/api-client-util'
-          url 'https://github.com/takipi/api-client/tree/master/api-client-util'
-        }
-      }
-    }
-  }
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			pom {
+				name = 'api-client-util'
+				description = 'OverOps API Client utility classes, interacts with OverOps Server REST API'
+				scm {
+					connection = 'scm:git:https://github.com/takipi/api-client/tree/master/api-client-util'
+					developerConnection = 'scm:git:https://github.com/takipi/api-client/tree/master/api-client-util'
+					url = 'https://github.com/takipi/api-client/tree/master/api-client-util'
+				}
+			}
+		}
+	}
 }
